syntax = "proto3";

option java_package = "com.xw.cloud.grpc.lib";

service Greeter {
    rpc SayHello ( HelloRequest) returns (  HelloReply) {}

}
message HelloRequest {
    string name = 1;
}
message HelloReply {
    string message = 1;
}


